fix: safari on iphone styling, make drops cleaner

--- a/styles/Frontend.module.css
+++ b/styles/Frontend.module.css
@@ -23,3 +23,12 @@
     background-color: black;
     z-index: 0;
 }
+
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+	@media only screen and (max-width: 575px) {
+		.monitor {
+            top: calc(100vh + 140px);
+        }        
+	}
+}}
