--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,16 +60,6 @@ div.contact > h1 {
     font-size: 4rem;
 }
 
-
-div.contact > div {
-	position: absolute;
-	top: 50vh;
-	left: 50vw;
-	transform: translate(-50%, -50%);
-	z-index: 5;
-	/* text-align: center; */
-}
-
 #closecontact {
 	position: absolute;
 	top: calc(100vh - 100px);
@@ -156,6 +146,10 @@ div.theme > p {
 	bottom: 60px;
 	text-align: center;
 	width: 77px;
+}
+
+.subtitle:hover {
+	cursor: pointer;
 }
 
 .backup {
@@ -291,7 +285,6 @@ div.categories > div > h1 {
 	text-align: center;
 }
 
-
 @media only screen and (max-width: 880px) {
 	.title {
 		width: 304px;
@@ -344,7 +337,11 @@ div.categories > div > h1 {
 		display: none;
 	}
 	.backup {
-		top: calc(100vh + 20px);
+		top: calc(100vh + 10px);
+	}
+	.title {
+		font-size: 3.5rem;
+		margin-bottom: 60px;
 	}
 }
 
@@ -354,3 +351,34 @@ div.categories > div > h1 {
 	}
 }
 
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+	@media only screen and (max-width: 575px) {
+		.title { 
+			margin-bottom: 100px;
+		}
+		.pronunciation {
+			margin-top: -10px;
+		}
+		.skillwrapper {
+			width: 100vw;
+			height: 20vh;
+		}
+		.backup {
+			top: calc(100vh + 80px);
+		}
+		.categories {
+			margin-top: 60px;
+		}
+		div.contact > h1 {
+			top: 10px;
+		}
+		#closecontact {
+			position: absolute;
+			top: calc(100vh - 180px);
+			left: 50vw;
+			transform: translateX(-50%);
+			color: white;
+		}
+	}
+}}
